--- a/index.html
+++ b/index.html
@@ -35,29 +35,30 @@
 <body>
 
 <div id="header">
-<h1>City Gallery</h1>
+<h1>陈旭恒 个人博客</h1>
 </div>
 
 <div id="nav">
-London<br>
-Paris<br>
-Tokyo<br>
+Android<br>
+Java<br>
+Kotlin<br>
+Flutter<br>
+Vue<br>
+软考<br>
 </div>
 
 <div id="section">
-<h2>London</h2>
+<h2>Android</h2>
 <p>
-London is the capital city of England. It is the most populous city in the United Kingdom,
-with a metropolitan area of over 13 million inhabitants.
+从大三开始开发安卓那是16年，到现在有三年了。
 </p>
 <p>
-Standing on the River Thames, London has been a major settlement for two millennia,
-its history going back to its founding by the Romans, who named it Londinium.
+感触颇深
 </p>
 </div>
 
 <div id="footer">
-Copyright ? W3Schools.com
+不畏将来
 </div>
 
 </body>
