--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ Kotlin<br>
 Flutter<br>
 Vue<br>
 软考<br>
-<button id="load" onclick="window.location.reload('/context.html')">跳转</button>  
+<button onclick="window.location.href = 'https://brucexuheng.github.io/context.html'">跳转</button>  
 </div>
 
 <div id="section">
