--- a/index.html
+++ b/index.html
@@ -62,5 +62,16 @@ Vue<br>
 不畏将来
 </div>
 
+<frameset rows="50%,50%">
+
+<frame src="/example/html/context.html">
+
+<frameset cols="25%,75%">
+<frame src="./context.html">
+<frame src="./context.html">
+</frameset>
+
+</frameset>
+
 </body>
 </html>
