--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 }
 #section {
     width:350px;
-    float:left;
+    float:right;
     padding:10px;	 	 
 }
 #footer {
@@ -43,7 +43,9 @@ Android<br>
 Java<br>
 Kotlin<br>
 Flutter<br>
+
 Vue<br>
+
 软考<br>
 <button onclick="window.location.href = 'https://brucexuheng.github.io/context.html'">跳转</button>  
 </div>
@@ -65,14 +67,4 @@ Vue<br>
 
 
 </body>
-<frameset rows="50%,50%">
-
-<frame src="/example/html/context.html">
-
-<frameset cols="25%,75%">
-<frame src="./context.html">
-<frame src="./context.html">
-</frameset>
-
-</frameset>
 </html>
