formatting index.html

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html>
 <head>
-<meta charset='UTF-8'><meta name='viewport' content='width=device-width initial-scale=1'>
+    <meta charset='UTF-8'>
+    <meta name='viewport' content='width=device-width initial-scale=1'>
 
-<style type='text/css'>html {overflow-x: initial !important;}:root { --bg-color:#ffffff; --text-color:#333333; --select-text-bg-color:#B5D6FC; --select-text-font-color:auto; --monospace:"Lucida Console",Consolas,"Courier",monospace; --title-bar-height:20px; }
+    <style type='text/css'>html {overflow-x: initial !important;}:root { --bg-color:#ffffff; --text-color:#333333; --select-text-bg-color:#B5D6FC; --select-text-font-color:auto; --monospace:"Lucida Console",Consolas,"Courier",monospace; --title-bar-height:20px; }
 .mac-os-11 { --title-bar-height:28px; }
 html { font-size: 14px; background-color: var(--bg-color); color: var(--text-color); font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; -webkit-font-smoothing: antialiased; }
 body { margin: 0px; padding: 0px; height: auto; inset: 0px; font-size: 1rem; line-height: 1.42857; overflow-x: hidden; background: inherit; tab-size: 4; }
@@ -1282,9 +1283,104 @@ a.ty-link {
 }
 
 
-</style><title>垃級Android开发工程師-陈某某</title>
+
+    </style>
+    <title>垃級Android开发工程師-陈某某</title>
 </head>
-<body class='typora-export os-windows'><div class='typora-export-content'>
-<div id='write'  class=''><h1 id='垃级android开发工程师'><span>垃级Android开发工程师</span></h1><h2 id='介绍'><span>介绍</span></h2><figure><table><thead><tr><th><span>姓名</span></th><th><span>陈</span></th></tr></thead><tbody><tr><td><span>年龄</span></td><td><span>27</span></td></tr><tr><td><span>工作年限</span></td><td><span>5</span></td></tr><tr><td><span>婚姻状况</span></td><td><span>未婚</span></td></tr><tr><td><span>所在城市</span></td><td><span>北京</span></td></tr><tr><td><span>期望薪资</span></td><td><span>23k</span></td></tr><tr><td><span>擅长领域</span></td><td><strong><span>支付</span></strong><span>  </span><strong><span>性能</span></strong><span>  </span><strong><span>网络</span></strong></td></tr></tbody></table></figure><p>&nbsp;</p><h2 id='教育'><span>教育</span></h2><p><span>2013 - 2017    山西工商学院(STABC)    本科</span></p><p>&nbsp;</p><h2 id='技能点'><span>技能点</span></h2><ul><li><span>熟悉Kotlin/Java</span></li><li><span>擅长MVP架构设计</span></li><li><span>熟悉数据库/应用存储</span></li><li><span>擅长基建/框架开发</span></li><li><span>长期贡献参与成熟的开源项目</span></li></ul><p>&nbsp;</p><h2 id='成就'><span>成就</span></h2><p><span>创始人</span></p><p><span>董事局主席兼首席执行官</span></p><h2 id='公司'><span>公司</span></h2><figure><table><thead><tr><th><span>时间</span></th><th><span>公司名称</span></th><th><span>职位</span></th></tr></thead><tbody><tr><td><span>2021.01 - 至今</span></td><td><span>JD</span></td><td><span>在线客服</span></td></tr></tbody></table></figure><p>&nbsp;</p><h2 id='项目'><span>项目</span></h2><h4 id='jd'><span>JD</span></h4><p><span>2019.03 - 至今</span><span>	</span><span>在线客服</span></p><p><span>专业的综合网上购物</span><em><span>商城</span></em><span>,销售家电、数码通讯、电脑、家居百货、服装服饰、母婴、图书、食品等数万个品牌优质商品.便捷、诚信的服务</span></p><ul><li><span>负责摸鱼划水</span></li><li><span>计算如何零成本发放优惠券给用户</span></li></ul><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p><h2 id='评价'><span>评价</span></h2><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p></div></div>
+<body class='typora-export os-windows'>
+<div class='typora-export-content'>
+    <div id='write' class=''><h1 id='垃级android开发工程师'><span>垃级Android开发工程师</span></h1>
+        <h2 id='介绍'><span>介绍</span></h2>
+        <figure>
+            <table>
+                <thead>
+                <tr>
+                    <th><span>姓名</span></th>
+                    <th><span>陈</span></th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td><span>年龄</span></td>
+                    <td><span>27</span></td>
+                </tr>
+                <tr>
+                    <td><span>工作年限</span></td>
+                    <td><span>5</span></td>
+                </tr>
+                <tr>
+                    <td><span>婚姻状况</span></td>
+                    <td><span>未婚</span></td>
+                </tr>
+                <tr>
+                    <td><span>所在城市</span></td>
+                    <td><span>北京</span></td>
+                </tr>
+                <tr>
+                    <td><span>期望薪资</span></td>
+                    <td><span>23k</span></td>
+                </tr>
+                <tr>
+                    <td><span>擅长领域</span></td>
+                    <td>
+                        <strong><span>支付</span></strong><span>  </span><strong><span>性能</span></strong><span>  </span><strong><span>网络</span></strong>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </figure>
+        <p>&nbsp;</p>
+        <h2 id='教育'><span>教育</span></h2>
+        <p><span>2013 - 2017    山西工商学院(STABC)    本科</span></p>
+        <p>&nbsp;</p>
+        <h2 id='技能点'><span>技能点</span></h2>
+        <ul>
+            <li><span>熟悉Kotlin/Java</span></li>
+            <li><span>擅长MVP架构设计</span></li>
+            <li><span>熟悉数据库/应用存储</span></li>
+            <li><span>擅长基建/框架开发</span></li>
+            <li><span>长期贡献参与成熟的开源项目</span></li>
+        </ul>
+        <p>&nbsp;</p>
+        <h2 id='成就'><span>成就</span></h2>
+        <p><span>创始人</span></p>
+        <p><span>董事局主席兼首席执行官</span></p>
+        <h2 id='公司'><span>公司</span></h2>
+        <figure>
+            <table>
+                <thead>
+                <tr>
+                    <th><span>时间</span></th>
+                    <th><span>公司名称</span></th>
+                    <th><span>职位</span></th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td><span>2021.01 - 至今</span></td>
+                    <td><span>JD</span></td>
+                    <td><span>在线客服</span></td>
+                </tr>
+                </tbody>
+            </table>
+        </figure>
+        <p>&nbsp;</p>
+        <h2 id='项目'><span>项目</span></h2><h4 id='jd'><span>JD</span></h4>
+        <p><span>2019.03 - 至今</span><span>	</span><span>在线客服</span></p>
+        <p><span>专业的综合网上购物</span><em><span>商城</span></em><span>,销售家电、数码通讯、电脑、家居百货、服装服饰、母婴、图书、食品等数万个品牌优质商品.便捷、诚信的服务</span>
+        </p>
+        <ul>
+            <li><span>负责摸鱼划水</span></li>
+            <li><span>计算如何零成本发放优惠券给用户</span></li>
+        </ul>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
+        <h2 id='评价'><span>评价</span></h2>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p></div>
+</div>
 </body>
 </html>
